--- a/download.html
+++ b/download.html
@@ -53,8 +53,10 @@
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
 
-                        <h2 class="section-heading">Instância 01 - Lista</h2>
+                        <h1 class="section-heading">Instância 01</h1>
 
+                        <h2 class="section-heading">Trabalhando com Listas</h2>
+                        
                         <p>Segue links do material disponibilizado para a instância:</p>
 
                         <ul>
@@ -64,7 +66,7 @@
                             <li><a href="arquivos/Lista_de_Exercício_01_Lista.pdf" target="_blank">Lista de exercício 01 - Listas</a></li>
                         </ul>
 
-                        <h2 class="section-heading">Instância 02 - Matriz</h2>
+                        <h2 class="section-heading">Trabalhando com Matriz</h2>
 
                         <p>Segue links do material disponibilizado para a instância:</p>
 
@@ -110,7 +112,12 @@
                                 </a>
                             </li>
                         </ul>
-                        <div class="small text-center text-muted fst-italic">Copyright &copy; Your Website 2023</div>
+                        <div class="small text-center text-muted fst-italic">
+                            Copyright &copy; Nisston Moraes Tavares de Melo. Todos os direitos reservados.<br>
+                            Este site utiliza um template do <a href="https://getbootstrap.com/" target="_blank">Bootstrap</a>. Licenciado <a href="https://opensource.org/licenses/MIT" target="_blank">MIT</a>, documentação <a href="https://creativecommons.org/licenses/by/3.0/" target="_blank">CC BY 3.0</a>.
+                            <a href="/politica-de-privacidade"><br>
+                            Contato: <a href="mailto:suporte@seusite.com">nisston.melo@lsd.ufcg.edu.br</a>
+                        </div>
                     </div>
                 </div>
             </div>
