--- a/roteiro.html
+++ b/roteiro.html
@@ -157,7 +157,12 @@
                                 </a>
                             </li>
                         </ul>
-                        <div class="small text-center text-muted fst-italic">Copyright &copy; Your Website 2023</div>
+                        <div class="small text-center text-muted fst-italic">
+                            Copyright &copy; Nisston Moraes Tavares de Melo. Todos os direitos reservados.<br>
+                            Este site utiliza um template do <a href="https://getbootstrap.com/" target="_blank">Bootstrap</a>. Licenciado <a href="https://opensource.org/licenses/MIT" target="_blank">MIT</a>, documentação <a href="https://creativecommons.org/licenses/by/3.0/" target="_blank">CC BY 3.0</a>.
+                            <a href="/politica-de-privacidade"><br>
+                            Contato: <a href="mailto:suporte@seusite.com">nisston.melo@lsd.ufcg.edu.br</a>
+                        </div>
                     </div>
                 </div>
             </div>
