--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
                         
                         <p>Os participantes receberão a aplicação da metodologia instanciada desenvolvida para a disciplina de ICC. Esta metodologia incluirá abordagens específicas para promover o ensino de programação com foco em desenvolver as habilidades do PC, adaptadas para estudantes não pertencentes à área de computação. Durante as aulas, os participantes terão a oportunidade de se envolver em atividades práticas e uso de ferramentas tecnológicas para o desenvolvimento de habilidades de programação e resolução de problemas.</p>
 
-                        <p>Um diagrama foi construído para representar todas as etapas e passos necessários para a implementação do experimento. Veja Figura abaixo</p>
+                        <p>O diagrama foi construído para representar todas as etapas e passos necessários para a implementação do experimento. Nele é possível identificar os dias de aulas teóricas e práticas, além do material que será utilizado. Veja Figura abaixo</p>
 
-                        <a href="#!"><img class="img-fluid" src="assets/img/Esquema_Estudo_Piloto.png" alt="..." /></a>
+                        <a href="#!"><img class="img-fluid" src="assets/img/Esquema_da_Aplicação_das_Aulas.png" alt="..." /></a>
                         <span class="caption text-muted">Fonte: Desenvolvida pelo autor.</span>
 
                     </div>
